--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,10 @@ converterGson = "2.9.0"
 retrofit = "2.9.0"
 koinAndroid = "3.3.0"
 fragmentKtx = "1.8.8"
+navigationFragmentKtx = "2.9.1"
+navigationUiKtx = "2.9.1"
+kotlinxCoroutinesAndroid = "1.9.0"
+roomRuntime = "2.6.1"
 
 java = "VERSION_1_8"
 
@@ -50,5 +54,17 @@ koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinAndr
 
 # Fragment
 androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragmentKtx" }
+
+# Navigation
+androidx-navigation-fragment-ktx = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
+navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigationUiKtx" }
+
+# Coroutines
+kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
+
+# Room
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
+androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomRuntime" }
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 
 [bundles]
