--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,17 @@
 [versions]
 converterGson = "2.9.0"
-pagingCompose = "3.4.0-alpha04"
-pagingRuntime = "3.3.6"
+pagingCompose = "3.3.2"
+pagingRuntime = "3.3.2"
 retrofit = "2.9.0"
 koinAndroid = "3.3.0"
-fragmentKtx = "1.8.8"
-navigationFragmentKtx = "2.9.1"
-navigationUiKtx = "2.9.1"
-kotlinxCoroutinesAndroid = "1.9.0"
+fragmentKtx = "1.6.2"
+navigationFragmentKtx = "2.7.7"
+navigationUiKtx = "2.7.7"
+kotlinxCoroutinesAndroid = "1.7.3"
 roomRuntime = "2.6.1"
-activityCompose = "1.8.0"
-composeBom = "2023.10.01"
-runtimeLivedata = "1.5.4"
+activityCompose = "1.7.2"
+composeBom = "2024.02.00"
+runtimeLivedata = "1.6.1"
 landscapistCoil = "2.2.6"
 
 java = "VERSION_1_8"
@@ -26,8 +26,8 @@ detekt = "1.23.3"
 detektTwitterComposeRules ="0.0.26"
 kotlin = "1.9.21"
 legacySupportV4 = "1.0.0"
-lifecycleLivedataKtx = "2.10.0"
-lifecycleViewmodelKtx = "2.10.0"
+lifecycleLivedataKtx = "2.7.0"
+lifecycleViewmodelKtx = "2.7.0"
 
 [libraries]
 
